ER-Web: new CSS class to ensure "flat" dropdown menus don't run out of screen space. Also includes 532.sql to add one table alias that we were missing!!

--- a/ERCentralAPI/ER-Web-Client/src/assets/ERx.css
+++ b/ERCentralAPI/ER-Web-Client/src/assets/ERx.css
@@ -228,3 +228,7 @@ ul.k-tabstrip-items li.k-item.k-state-active {
 	cursor:default;
 }
 
+.FlatDropdown {
+  max-height: 60vh;
+  overflow: auto;
+}
